Create evaluation methods and primitive Android gateway